Revert "Fixed Select2 jumping around in Chrome"
This reverts commit 0daee346264e8325575b69bf2da5aa2c42158b98.
This results in artifacts being displayed in Chrome, and doesn't
fix the other jumping issue.

--- a/select2.css
+++ b/select2.css
@@ -667,7 +667,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     margin: 0 !important;
     padding: 0 !important;
     overflow: hidden !important;
-    position: static !important;
+    position: absolute !important;
     outline: 0 !important;
     left: 0px !important;
     top: 0px !important;
